fix embedded video size overflowing the right

--- a/_sass/jekyll-alternative-minimal.scss
+++ b/_sass/jekyll-alternative-minimal.scss
@@ -144,6 +144,21 @@ a:hover small {
   
 }
 
+.video-container {
+  position: relative;
+  padding-bottom: 56.25%;
+  height: 0;
+  margin-bottom: 20px;
+}
+
+.video-container iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
 blockquote {
   border-left:1px solid #e5e5e5;
   margin:0;
